--- a/src/IssueTracker.Api/IssueTracker.Api.csproj
+++ b/src/IssueTracker.Api/IssueTracker.Api.csproj
@@ -20,10 +20,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Functions\Issues\Jobs" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\IssueTracker.Core\IssueTracker.Core.csproj" />
     <ProjectReference Include="..\IssueTracker.CQRS\IssueTracker.CQRS.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services" />
   </ItemGroup>
 </Project>
