--- a/src/IssueTracker.Core/IssueTracker.Core.csproj
+++ b/src/IssueTracker.Core/IssueTracker.Core.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="10.3.4" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.22.1" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.20" />
   </ItemGroup>
 
 </Project>
